cambio de una linea index

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</title>
 </head>
 <body>
+	Vamos a hacer un cambio <br>
 	<h1>Encabezado de mi pagina</h1>
 	--------------------------------------
 	Esta es una modificacion en mi rama :P
