--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</title>
 </head>
 <body>
+	este es codigo de la rama pw2
 	Vamos a hacer un cambio <br>
 	<h1>Encabezado de mi pagina</h1>
 	--------------------------------------
