--- a/practica01css 2/index.html
+++ b/practica01css 2/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html  lang="es">
 <head>
 	<meta charset="utf-8">
@@ -84,4 +84,5 @@
 		</article>
 	</section>
 </body>
+</html>
 </html>
