--- a/practica01css 2/index.html
+++ b/practica01css 2/index.html
@@ -1,88 +1,64 @@
-<!<!DOCTYPE html>
-<html  lang="es">
-<head>
-	<meta charset="utf-8">
-	<title>Practica01 html5 + css3</title>
+<!DOCTYPE html>
+<html lang="es">
+<head>   
+	<meta charset="UTF-8">
+	<title>Práctica01 HTML5 + CSS3</title>
+	<link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
 	<header>
 		<img src="img/resplandor.png" alt="">
-		<img src="img/logo.png" alt="">
-
-		<NAV>
-			<UL>
-				<LI>INICIO</LI>
-				<LI>SECCION</LI>
-				<LI>SECCION</LI>
-				<LI>SECCION</LI>
-				<LI>SECCION</LI>
-				<LI>SECCION</LI>
-			</UL>
-			<FORM action="">
-				<input type="text" name="" placeholder="Buscar aqui...">
-				<input type="button"  value="Buscar">
-			</FORM>
-		</NAV>
+		<img src="img/logo.png" alt="" id="logo">
+		<nav>
+			<ul>
+				<li>Inicio</li>
+				<li>Sección</li>
+				<li>Sección</li>
+				<li>Sección</li>
+				<li>Sección</li>
+				<li>Sección</li>
+			</ul>
+			<form action="">
+				<input type="text" placeholder="Buscar aquí...">
+				<input type="button" value="buscar">
+			</form>
+		</nav>
 	</header>
-	<section>
+	<section id="seccion01">
 		<article>
 			<img src="img/slide2.jpg" alt="">
-	
 		</article>
 	</section>
-	<section>
+	<section id="seccion02">
 		<article>
-			<img src="img/separador.jpg">
+			<img src="img/separador.jpg" alt="">
 			<br>
-			Una seccion
+			<span class="unaSeccion nito">Una sección</span>
 			<br>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, natus, ratione. Pariatur laudantium fugiat, atque doloribus modi hic sapiente at ut maiores quas expedita, porro totam? Quidem natus aperiam praesentium?
 			<p></p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt quia ducimus delectus tempora at, voluptatem temporibus nostrum mollitia porro iste, accusamus nulla ullam sequi iure rerum quidem corporis natus officia?
 			<p></p>
-			<input type="submit" value="Ver màs" name="">
+			<input type="submit" value="Ver más">
 		</article>
 		<article>
-			<img src="img/separador.jpg">
+			<img src="img/separador.jpg" alt="">
 			<br>
-			Otra seccion
+			<span class="otraSeccion nito">Otra sección</span>
 			<br>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Delectus, fuga, dolores. Voluptatibus iusto, eligendi enim beatae quasi! Quam quisquam eveniet, ipsa unde vero? Perferendis aspernatur, minima dolorem eum, vel rerum.
+			<p></p>	
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, ut, nesciunt ipsam atque suscipit ad rerum exercitationem omnis magnam. Excepturi ipsa omnis expedita cupiditate maiores vitae necessitatibus, error praesentium hic.
 			<p></p>
-			Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-			<p></p>
-			<input type="submit" value="Ver màs" name="">
+			<input type="submit" value="Ver más">
 		</article>
 		<article>
-			<img src="img/separador.jpg">
+			<img src="img/separador.jpg" alt="">
 			<br>
-			Un video
+			<span class="otraSeccion nito">Un vídeo</span>
 			<br>
 			<img src="img/video.jpg" alt="">
-			<br>
-			<input type="submit" value="Ver màs" name="">
 		</article>
 	</section>
 </body>
-</html>
 </html>
