Practica04 html5 y css3

--- a/practica04css3/index.html
+++ b/practica04css3/index.html
@@ -7,7 +7,7 @@
  </head>
  <body>
  <header>
- 	<img src="img/first_bike.png">
+ 	<img src="img/first_bike.png" id="bicicleta">
  	<img src="img/go_to_shop.png" id="gotoshop">
  	<img src="img/buy.png" id="buy">
  	<img src="img/logo_rojo.png" id="roja">
@@ -23,27 +23,37 @@
  			<li>Blog</li>
  			<li>Store</li>
  		</ul>
+
  	</nav>
- 	<section>
- 		<article>
+ 	<section id="Seccionuno">
+ 		<hr id="rayaprimera">
+ 		<article id="article1"> 			
  			<br>
  			<span class="Letragrande">FIRST SENSE OF</span>
+ 			<br>
  			<span class="Letragrandeverde">BALANCE</span>
- 			<hr>
+ 			<br>
+ 			<br>
+ 			<hr id="rayasegunda">
+ 			<br>
+ 			<br>
  			The perfect training bike of your child from 2 to 5 years old and the first choice for parents worldwide. FirstBIKE supporst the development of a child's balance and probides a no-stress method of learning to ride a bike
- 			<article>
- 			<img src="img/video01.png">
- 			<img src="img/video02.png">
+ 			<article id="article11">
+ 			<br>
+ 			<img src="img/video01.png" id="primervideo">
+ 			<img src="img/video02.png" id="segundovideo">
  			</article>
  		</article>
- 		<article>
- 			<img src="img/bike.jpg">
- 			<img src="img/5years.png">
+ 		<article id="article2">
+ 			<img src="img/bike.jpg" id="bike">
+ 			<img src="img/5years.png" id="years">
  		</article>
  	</section>
  	<footer>
- 		<img src="img/logos_footer.png">
+ 		<img src="img/logos_footer.png" id="poderoso">
+ 		<br>
  		&copy;2014 Miles Year Ltd, Official Distributor of FirstBIKE in Hong Kong
+ 		<br><br><br>
  		<article>
  			ABOUT US
  			<hr>
